--- a/composer.json
+++ b/composer.json
@@ -1,33 +1,40 @@
 {
-    "name": "detain/myadmin-mailchimp-mailinglist",
+    "name": "detain\/myadmin-mailchimp-mailinglist",
     "type": "myadmin-plugin",
     "description": "Mailchimp handling plugin for MyAdmin",
-    "keywords": ["abuse","administration","spam"],
+    "keywords": [
+        "abuse",
+        "administration",
+        "spam"
+    ],
     "license": "LGPL-2.1",
     "authors": [
         {
             "name": "Joe Huss",
-            "homepage": "https://my.interserver.net/"
+            "homepage": "https:\/\/my.interserver.net\/"
         }
     ],
     "config": {
-        "bin-dir": "vendor/bin",
+        "bin-dir": "vendor\/bin",
         "minimum-stability": "dev"
     },
     "require": {
         "php": ">=5.0.0",
         "ext-soap": "*",
-    "symfony/event-dispatcher": "*",
-    "detain/myadmin-plugin-installer": "dev-master"
+        "symfony\/event-dispatcher": "*",
+        "detain\/myadmin-plugin-installer": "dev-master",
+        "roave\/security-advisories": "dev-master"
     },
     "require-dev": {
-        "phpunit/phpunit": "*",
-        "vlucas/phpdotenv": "*",
-        "codeclimate/php-test-reporter": "dev-master",
-        "satooshi/php-coveralls": "*",
-        "codacy/coverage": "dev-master"
+        "phpunit\/phpunit": "*",
+        "vlucas\/phpdotenv": "*",
+        "codeclimate\/php-test-reporter": "dev-master",
+        "satooshi\/php-coveralls": "*",
+        "codacy\/coverage": "dev-master"
     },
     "autoload": {
-        "psr-4": {"Detain\\MyAdminMailchimp\\": "src/"}
+        "psr-4": {
+            "Detain\\MyAdminMailchimp\\": "src\/"
+        }
     }
 }
