--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "detain\/myadmin-mailchimp-mailinglist",
+    "name": "detain/myadmin-mailchimp-mailinglist",
     "type": "myadmin-plugin",
     "description": "Mailchimp handling plugin for MyAdmin",
     "keywords": [
@@ -21,16 +21,16 @@
     "require": {
         "php": ">=5.0.0",
         "ext-soap": "*",
-        "symfony\/event-dispatcher": "*",
-        "detain\/myadmin-plugin-installer": "dev-master",
-        "roave\/security-advisories": "dev-master"
+        "symfony/event-dispatcher": "*",
+        "detain/myadmin-plugin-installer": "dev-master",
+        "roave/security-advisories": "dev-master"
     },
     "require-dev": {
-        "phpunit\/phpunit": "*",
-        "vlucas\/phpdotenv": "*",
-        "codeclimate\/php-test-reporter": "dev-master",
-        "satooshi\/php-coveralls": "*",
-        "codacy\/coverage": "dev-master"
+        "phpunit/phpunit": "*",
+        "vlucas/phpdotenv": "*",
+        "codeclimate/php-test-reporter": "dev-master",
+        "satooshi/php-coveralls": "*",
+        "codacy/coverage": "dev-master"
     },
     "autoload": {
         "psr-4": {
