--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Detain\\MyAdminMailchimp\\": "src\/"
+            "Detain\\MyAdminMailchimp\\": "src/"
         }
     }
 }
